--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,7 +14,8 @@
 body {
   margin: 0 auto;
   max-width: 1440px;
-  font-family: "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
+  font-family: "Manrope", "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
+  font-weight: 200;
 }
 
 .container {
@@ -44,8 +45,8 @@ body {
 .banner p {
   font-size: 3rem;
   font-stretch: semi-expanded;
-  font-weight: 100;
   margin-bottom: 1.5rem;
+  font-weight: 100;
 }
 
 .banner h3 {
