--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -29,7 +29,11 @@ body {
 
 .primary-nav {
   height: 2.3rem;
-  background: linear-gradient(rgb(168, 168, 168), rgb(105, 105, 105) 50%, rgb(95, 95, 95) 51%);
+  background: linear-gradient(
+    rgb(168, 168, 168),
+    rgb(105, 105, 105) 50%,
+    rgb(95, 95, 95) 51%
+  );
   border-radius: 5px;
   display: flex;
 }
@@ -42,14 +46,14 @@ body {
   padding-top: 5%;
 }
 
-.banner p {
+.banner h3 {
   font-size: 3rem;
   font-stretch: semi-expanded;
   margin-bottom: 1.5rem;
   font-weight: 100;
 }
 
-.banner h3 {
+.banner p {
   font-size: 1.7rem;
   font-weight: 100;
 }
@@ -84,16 +88,17 @@ body {
 .apple-footer {
   display: flex;
   flex-direction: row;
-  font-size: 0.62rem;
+  font-size: 0.63rem;
+  font-weight: bold;
   line-height: 1rem;
-  color: #777;
+  color: rgb(105, 105, 105);
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
 .apple-footer a {
   text-decoration: none;
-  color: blue;
+  color: #08c;
 }
 
 .apple-footer-div {
@@ -104,7 +109,7 @@ body {
 }
 
 .apple-footer-div-text a {
-  color: rgb(0, 136, 204);
+  color: #08c;
 }
 
 .footer-copyright {
@@ -116,11 +121,16 @@ body {
 .footer-copyright a {
   padding-right: 0.1rem;
   padding-left: 0.1rem;
-  color: rgb(0, 136, 204);
+  color: #08c;
 }
 
 .apple-footer-div-text {
   line-height: 1.5rem;
+}
+
+.li-apple a {
+  color: white;
+  text-decoration: none;
 }
 
 .banner a:hover {
@@ -133,17 +143,27 @@ body {
   background: url("../images/your_verse_hero.jpg") 50% 100% no-repeat;
 }
 
-.btn-apple {
-  height: 2.2rem;
-  width: 6.5rem;
-  color: white;
-  border: none;
-  background: linear-gradient(rgb(168, 168, 168), rgb(105, 105, 105) 50%, rgb(95, 95, 95) 51%);
-  margin-top: 1px;
-  border-right: 1px solid rgb(128, 128, 128);
+.li-apple {
+  display: flex;
+  flex-direction: row;
+  font-size: 0.75rem;
+  font-weight: bold;
 }
 
-.btn-apple img {
+.li-apple li {
+  height: 2.2rem;
+  width: 6.5rem;
+  background: linear-gradient(
+    rgb(168, 168, 168),
+    rgb(105, 105, 105) 50%,
+    rgb(95, 95, 95) 51%
+  );
+  border-right: 1px solid rgb(128, 128, 128);
+  padding-top: 0.7rem;
+  text-align: center;
+}
+
+.li-apple img {
   padding: 0.1px;
   margin: -5px;
 }
@@ -154,7 +174,11 @@ body {
   margin-top: 0.6rem;
   padding-left: 7px;
   border-radius: 10px;
-  background: linear-gradient(rgb(168, 168, 168), rgb(105, 105, 105) 50%, rgb(95, 95, 95) 51%);
+  background: linear-gradient(
+    rgb(168, 168, 168),
+    rgb(105, 105, 105) 50%,
+    rgb(95, 95, 95) 51%
+  );
   background-image: url("http://www.clker.com/cliparts/5/N/0/x/w/j/search-icon-marine-th.png");
   background-size: 0.8rem;
   background-repeat: no-repeat;
